# trunk-hello-world

./: Cargo.toml  Makefile  README.md  index.html
doc/: index.html  trunk-hello-world-912039a40549a5cd_bg.wasm  trunk-hello-world-94ef543b60f65e0c.js
docs/: index.html  trunk-hello-world-424cb90ac73fd151_bg.wasm  trunk-hello-world-765e518ac4ca4751.js  trunk-hello-world-765e518ac4ca4751_bg.wasm  trunk-hello-world-94ef543b60f65e0c_bg.wasm
src/: main.rs
tests/: test-trunk-hello-world.rs
